# makan

./: .gitignore  DEPLOYMENT.md  README.md  docker-compose.yml  pyproject.toml
.claude/skills/makan-knowledge/: SKILL.md
backend/: .dockerignore  .env.docker  .env.example  Dockerfile  requirements.txt
backend/app/: main.py  models.py  schemas.py
backend/app/api/: deps.py
backend/app/core/: config.py  net.py  rate_limit.py  security.py
backend/app/db/: init_db.py  session.py
backend/app/seed/: places_data.py  seed.py
backend/app/services/: bans.py  email.py  embeddings.py  geo.py  google_auth.py  knowledge.py  llm.py  media.py  points.py  rag.py
backend/tests/: conftest.py  test_admin_users.py  test_auth.py  test_images.py  test_knowledge_rag.py  test_places.py  test_points.py  test_reviews_categories.py
deploy/: Caddyfile  docker-compose.prod.yml  push.py
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/leaderboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/map/: page.tsx
frontend/app/onboarding/: page.tsx
frontend/app/register/: page.tsx
frontend/app/suggest/: page.tsx
frontend/components/: leaderboard-list.tsx  location-picker.tsx
frontend/components/admin/: analytics-cards.tsx  categories-panel.tsx  place-form.tsx  places-table.tsx  (+3 more)
frontend/design-system/: MASTER.md
frontend/lib/: api.ts  categories.ts  i18n.tsx  types.ts  use-auth.ts  use-theme.ts
(+39 files in other folders)
